<resources>
    <string name="app_name">Exercise Logger</string>

    <string name="DB_NAME">exercise_logger.db</string>

    <string name="datePlanner">Planner</string>
    <string name="graphViewer">Graphs</string>
    <string name="alarmManager">Alarms</string>
    <string name="graphViewerMessage">Under Construction!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_graph">GraphActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_calendar">PlannerActivity</string>
    <string name="title_activity_day">DayActivity</string>

    <string name="abbreviated_monday">Mon</string>
    <string name="abbreviated_tuesday">Tue</string>
    <string name="abbreviated_wednesday">Wed</string>
    <string name="abbreviated_thursday">Thu</string>
    <string name="abbreviated_friday">Fri</string>
    <string name="abbreviated_saturday">Sat</string>
    <string name="abbreviated_sunday">Sun</string>

    <string name="title_activity_alarm_manager">AlarmManagerActivity</string>

    <string name="add_category">Add Category</string>
    <string name="delete_category">Delete</string>
</resources>
