<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/monthTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="serif"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abbreviated_sunday"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abbreviated_monday"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abbreviated_tuesday"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abbreviated_wednesday"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abbreviated_thursday"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abbreviated_friday"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abbreviated_saturday"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"/>
     </LinearLayout>

    <include layout="@layout/week" android:id="@+id/week1" />
    <include layout="@layout/week" android:id="@+id/week2" />
    <include layout="@layout/week" android:id="@+id/week3" />
    <include layout="@layout/week" android:id="@+id/week4" />
    <include layout="@layout/week" android:id="@+id/week5" />

</LinearLayout>