<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:layout_centerVertical="true"
                android:layout_weight=".8">
        <Button
            android:text="@string/datePlanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startDatePlanner"/>
        <Button
            android:text="@string/graphViewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startDatePlanner"
            android:id="@+id/startGraphViewer"/>
        <Button
            android:text="@string/alarmManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startGraphViewer"
            android:id="@+id/startAlarmManager"/>


</RelativeLayout>
